[tool.poetry]
name = "spotlight"
version = "0.1.0"
description = "Spotlight highlights the features contributing to any federal website's success, for free."
authors = ["Alex Hendrie Bielen <alex.bielen@gsa.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = ">=1.9.174"
Django = ">=2.2.3"
djangorestframework = "3.11.0"
django-rest-swagger = "2.2.0"
docutils = ">=0.14,<0.16"
gunicorn = ">=19.9.0"
jmespath = ">=0.9.4"
python-dateutil = ">=2.8.0"
pytz = ">=2019.1"
s3transfer = ">=0.2.1"
six = ">=1.12.0"
sqlparse = ">=0.3.0"
urllib3 = ">=1.25.3"
elasticsearch-dsl = ">=5.0.0,<6.0.0"
whitenoise = ">=4.1.3"
django-cors-headers = ">=3.2.0"
tldextract = "^2.2.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
bandit = "^1.6.2"
flake8 = "^3.8.3"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
