[tool.poetry]
authors = ["Alex Hendrie Bielen <alex.bielen@gsa.gov>"]
description = "Spotlight highlights the features contributing to any federal website's success, for free."
name = "spotlight"
version = "0.1.0"

[tool.poetry.dependencies]
Django = ">=2.2.3"
boto3 = ">=1.9.174"
django-cors-headers = ">=3.2.0"
django-rest-swagger = "2.2.0"
djangorestframework = "3.11.0"
dnspython = "^2.0.0"
docutils = ">=0.14,<0.16"
elasticsearch-dsl = ">=5.0.0,<6.0.0"
gunicorn = ">=19.9.0"
jmespath = ">=0.9.4"
publicsuffix = "^1.1.1"
python = "^3.7"
python-dateutil = ">=2.8.0"
pytz = ">=2019.1"
requests = "^2.24.0"
s3transfer = ">=0.2.1"
six = ">=1.12.0"
sqlparse = ">=0.3.0"
strict-rfc3339 = "^0.7"
tldextract = "^2.2.3"
urllib3 = ">=1.25.3"
whitenoise = ">=4.1.3"
pshtt = "^0.6.7"
trustymail = ">=0.7.5"
sslyze = ">=2.1.3,<3.0"
pyyaml = "^5.3.1"
lxml = "^4.5.2"
ijson = "^3.1.1"
beautifulsoup4 = "^4.9.1"
awscli = "^1.18.117"
httpx = "^0.14.2"
fire = "^0.3.1"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "^19.10b0"
flake8 = "^3.8.3"
pylint = "^2.5.3"
rope = "^0.17.0"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
